--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,68 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+
+<title lang="en">Homepage</title>
+
+<head>
+
+  <div class="container1">
+  
+</div>
+
+  <center>
+    
+<h1 style="font-family:'Lobster',cursive;">Welcome to Project Z</h1>
+
+  </center>
+	
+	  <style>
+
+ head {
+      font-family:'Lobster',cursive;
+
+      font-size:48px;
+     }
+
+      .avatar2 {
+  vertical-align: middle;
+  width: 200px;
+  height: 120px;
+  border-radius: 50%;
+
+
+}
+
+.container {
+  align-items: flex-start;
+  display: flex;
+  height: 20em;
+}
+
+.container1 {
+  align-items: flex-start;
+  display: flex;
+  height: 5em;
+}
+</style>
+
+</head>
+
+
+<body class="splash">
+
+<div class="container">
+  
+</div>
+
+<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+
+
+
+
+
+<center>
+  
+    <a href="/records/listen" class="btn btn-danger btn-md">Start recording</a>
+
+</center>
+
+</body>
